--- a/index.html
+++ b/index.html
@@ -13,13 +13,18 @@
 <body class="dark:bg-black">
 	<div id="app">
 		<style>
+				html, body {
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        overflow: hidden;
+    }
 			.loading-wrap {
 				display: flex;
 				justify-content: center;
 				align-items: center;
 				height: 100vh;
 			}
-
 			.balls {
 				width: 4em;
 				display: flex;
